# video_stream_data

./: CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: test-and-publish-release.yml  test-and-publish.yml  test-main.yml
test/: test_load_yaml.py  test_utils.py
test/data/: README.md  local_video_device.yml  video_stream.yml
video_stream_data/: __init__.py  utils.py
