[metadata]
name = video_stream_data
version = 0.1.0
author = Andreas Bresser
author_email = Andreas.Bresser@dfki.de
license = BSD-3
description = Unified data format for video streams (devices, server, ...)
url = https://github.com/brean/video_stream_data

long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Automatically find all packages in the project
packages = find:

# Define runtime dependencies, one per line
install_requires =

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:video_stream_data/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest